
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef TYPE_1__* gdImagePtr ;
struct TYPE_4__ {int transparent; int * alpha; int * blue; int * green; int * red; int trueColor; } ;


 int gdAlphaTransparent ;
 int gdImageGetPixel (TYPE_1__*,int,int) ;
 int gdTrueColorAlpha (int ,int ,int ,int ) ;

int gdImageGetTrueColorPixel (gdImagePtr im, int x, int y)
{
 int p = gdImageGetPixel(im, x, y);

 if (!im->trueColor) {
  return gdTrueColorAlpha(im->red[p], im->green[p], im->blue[p], (im->transparent == p) ? gdAlphaTransparent : im->alpha[p]);
 } else {
  return p;
 }
}
